bug p5 canvas showing up on mobile portfolio and about

--- a/src/mobile/PortfolioM.css
+++ b/src/mobile/PortfolioM.css
@@ -3,7 +3,9 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    /* background-color: white; */
+    /* background-color: white;  */
+    /* background-color: rgba(255,255,255,1);
+    transition: background-color 1s; */
 }
 .portfolio-m > a:visited{
     color: rgba(0,0,0,1);;
